# budgie-weather-applet

./: README.md  meson.build
src/: BudgieWeatherApplet.plugin.in  BudgieWeatherApplet.vala  ILogindManager.vala  OpenWeatherMapDTO.vala  WeatherInfo.vala  meson.build  net.milgar.budgie-weather.gschema.xml  plugin.gresource.xml  settings.ui
src/Providers/: Common.vala  LibGWeather.vala  OpenWeatherMap.vala
